hopefully fixed wine table alignment.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -167,15 +167,21 @@ float: right;
 
 }
 
+.wine {
+  width: 75%;
+}
+
 .glass {
   color: white;
   padding-left: 50px;
   text-align: right;
+  width: 12%;
 }
 
 .bottle {
   color: white;
   text-align: right;
+  width: 12%;
 }
 
 th {
